--- a/vercel.json
+++ b/vercel.json
@@ -1,13 +1,21 @@
 {
   "functions": {
-    "index.php": {
+    "api/*.php": {
       "runtime": "vercel-php@0.6.0"
     }
   },
   "routes": [
     {
+      "src": "/balance",
+      "dest": "/api/balance.php"
+    },
+    {
+      "src": "/event",
+      "dest": "/api/event.php"
+    },
+    {
       "src": "/(.*)",
-      "dest": "/index.php"
+      "dest": "/api/index.php"
     }
   ]
 } 
