--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,10 @@
 {
   "functions": {
-    "api/*.php": {
+    "api/index.php": {
       "runtime": "vercel-php@0.6.0"
     }
   },
   "routes": [
-    {
-      "src": "/balance",
-      "dest": "/api/balance.php"
-    },
-    {
-      "src": "/event",
-      "dest": "/api/event.php"
-    },
     {
       "src": "/(.*)",
       "dest": "/api/index.php"
