--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,23 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.php",
-      "use": "vercel-php@0.7.0"
+  "functions": {
+    "api/index.php": {
+      "runtime": "vercel-php@0.7.0"
     }
-  ],
+  },
   "routes": [
+    {
+      "src": "/reset",
+      "dest": "/api/index.php"
+    },
+    {
+      "src": "/balance",
+      "dest": "/api/index.php"
+    },
+    {
+      "src": "/event",
+      "dest": "/api/index.php"
+    },
     {
       "src": "/(.*)",
       "dest": "/api/index.php"
