--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,2 @@
-# Composer
-/vendor/
-composer.lock
-
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Logs
-*.log
-
-# Environment files
-.env
-.env.local
-.env.production
-
-# Temporary files
-*.tmp
-*.temp 
+/vendor
+/database.sqlite 
